# satis-tmp

./: .gitignore  README.md  evaluate.py  predict.py  preprocess.py  pyproject.toml  sandbox.ipynb
