[tool.poetry]
name = "satis"
version = "0.1.0"
description = ""
authors = ["Vlad Shmyhlo <aion.stu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
jupyterlab = "^3.4.2"
ipython = "^8.4.0"
numpy = "^1.22.4"
einops = "^0.4.1"
timm = "^0.5.4"
torchvision = "^0.12.0"
pytorchvideo = "^0.1.5"
opencv-python = "^4.5.5"
click = "^8.1.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
