[tool.poetry]
authors = ["Vlad Shmyhlo <aion.stu@gmail.com>"]
description = ""
name = "satis"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.3"
einops = "^0.4.1"
ipython = "^8.4.0"
jupyterlab = "^3.4.2"
numpy = "^1.22.4"
opencv-python = "^4.5.5"
pandas = "^1.4.2"
python = ">=3.8,<3.11"
pytorchvideo = "^0.1.5"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
timm = "^0.5.4"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
